# k8s-images-manager

./: .dockerignore  .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  push.sh  turbo.json
.github/workflows/: helm-chart.yaml  master-build-agent.yaml  pull-request.yaml  tag-docker-server.yml  tag-docker-webapp.yml  tag-release-agent.yaml
agent/: .dockerignore  .goreleaser.yaml  Cargo.toml  Dockerfile  Dockerfile.linux  README.md  mise.toml  package.json
agent/src/: api.rs  commands.rs  logger.rs  main.rs
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  agents.yaml  httproute.yaml  server-ingress.yaml  server-service.yaml  server.yaml  serviceaccount.yaml  webapp-ingress.yaml  webapp-service.yaml  webapp.yaml
server/: .dockerignore  Dockerfile  eslint.config.mjs  package.json  prisma.config.mts  tsconfig.json  vitest.e2e.config.mts
server/prisma/: schema.prisma
server/prisma/migrations/20260305213000_init/: migration.sql
server/src/: index.mts  prisma-client.mts  router.mts  server.mts  store.mts
server/src/tools/: env.mts  logger.mts  metrics.mts
server/tests/: api.spec.mts  health.spec.mts  test-with-app.mts
webapp/: Dockerfile  eslint.config.mjs  nuxt.config.ts  package.json
webapp/assets/: theme-overrides.css
webapp/components/: grid.vue  hostname-table.vue
webapp/components/icon/: server.vue  whale.vue
webapp/composables/: use-api.ts
webapp/layouts/: default.vue
webapp/pages/: index.vue  nodes.vue
webapp/plugins/: tippy.ts
