[package]
name = "k8s-images-manager-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
chrono = "0.4.42"
env_logger = "0.11.8"
gethostname = "1.1.0"
log = "0.4.29"
# https://github.com/rust-openssl/rust-openssl/issues/2217#issuecomment-2288234679
openssl = { version = "0.10.35", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
